--- a/app/src/main/res/layout/welcome_fragment.xml
+++ b/app/src/main/res/layout/welcome_fragment.xml
@@ -2,14 +2,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/picture"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:contentDescription="@string/description"
         android:src="@mipmap/picture"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,9 +46,9 @@
         android:id="@+id/welcome_text_two"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="67dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="13dp"
-        android:layout_marginEnd="67dp"
+        android:layout_marginEnd="20dp"
         android:text="@string/welcome_text"
         android:textAlignment="center"
         android:textColor="@color/blue"
@@ -63,7 +64,7 @@
         android:layout_marginStart="67dp"
         android:layout_marginTop="13dp"
         android:layout_marginEnd="67dp"
-        android:text="ИМКТ Зеленый крест"
+        android:text="@string/sponsors"
         android:textAlignment="center"
         android:textColor="@color/blue"
         android:textSize="16sp"
