--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -86,6 +86,15 @@
         <argument
             android:name="researchId"
             app:argType="long" />
+        <action
+            android:id="@+id/action_checkResearchFragment_to_inputResearchFragment"
+            app:destination="@id/inputResearchFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"
+            app:popUpTo="@id/main_navigation"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/totalFragment"
@@ -134,6 +143,25 @@
                 app:argType="long" />
             <argument
                 android:name="collectionNumber"
+                app:argType="long" />
+            <action
+                android:id="@+id/action_researchDetailsFragment_to_changeResearchFragment"
+                app:destination="@id/changeResearchFragment"
+                app:enterAnim="@anim/nav_default_enter_anim"
+                app:exitAnim="@anim/nav_default_exit_anim"
+                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+                app:popExitAnim="@anim/nav_default_pop_exit_anim">
+                <argument
+                    android:name="researchId"
+                    app:argType="long" />
+            </action>
+        </fragment>
+        <fragment
+            android:id="@+id/changeResearchFragment"
+            android:name="com.example.cleanwater_project.presentation.main.ChangeResearchFragment"
+            android:label="ChangeResearchFragment">
+            <argument
+                android:name="researchId"
                 app:argType="long" />
         </fragment>
     </navigation>
