--- a/app/src/main/res/layout/change_research_fragment.xml
+++ b/app/src/main/res/layout/change_research_fragment.xml
@@ -1612,7 +1612,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="Комментарий"
-                            android:inputType="text"
+                            android:inputType="textMultiLine"
+                            android:maxLength="200"
                             android:paddingTop="13dp"
                             android:paddingBottom="13dp"
                             android:textColor="@color/dark"
